@@ -5,19 +5,17 @@ AUX gimp-svg.diff 1080 RMD160 ef80ab1b82622dc28d38a3a606dec40b36685a04 SHA1 636d
 AUX gimp-web-browser.patch 1579 RMD160 33fd018a83b8ade7ced9bbd4c80b9c29468781fd SHA1 af9742a1aa6d07547d5753dcd34661be6f5e36a4 SHA256 f6329bb38be785a7c8c49cc8de61e41ce3a12a118849a713a54212e91de2a747
 DIST gimp-2.3.19.tar.bz2 16803491 RMD160 3ea293372ef0656543912c0a63ab287fd9ae72ca SHA1 f04efda774e8ed57ded5058d37091f7a8d7b17b2 SHA256 f4e388b7b52db1e91e052dcd0aeab0844fcf83a14ccd24228bf033e7937007f0
 DIST gimp-2.4.2.tar.bz2 17777846 RMD160 f9da1008c29746379eb728f27e9b0d452ba2318f SHA1 4913a411abde3fccae5350e00a9bd20742715367 SHA256 00393b2d2aa163a7791dc4456306bf903d920d345aeee162d0e2ce85cfae5fb1
-DIST gimp-2.4.4.tar.bz2 17775071 RMD160 b497e8bdf986bf94673ac702ecf0289350fc14e0 SHA1 47c80470e15e3fa29e46652130e870e0c952789f SHA256 d059c7159bca6e90f2a8201f1efdbd1c5af52a876e7c6462a7829d4b1618d4d6
 DIST gimp-2.4.5.tar.bz2 17819962 RMD160 963a139e417354d898abd2499a5f31ecfc0da75b SHA1 70cf6af5700cf6db73fca898510873394eb95581 SHA256 dadf13c2e605245572f1bdb948969c3f3ef3d2b18a9ca1f64d6f9383ac48d5ae
 EBUILD gimp-2.3.19.ebuild 3448 RMD160 c7defd898465d682167ab9566b2b6f1dcefb41e0 SHA1 18183c72f90d0862c34989f01f155de8639187b6 SHA256 fedd01d9b2873bfa9837d4c1417d86904ee52c4dcc88b4eb1442146613c3476a
-EBUILD gimp-2.4.2.ebuild 3706 RMD160 cf265b6a9274af37bff76aa7048e20a1bbcbc946 SHA1 41ffb1ab555669664ba5cca84b4ae53d35ed1ce0 SHA256 cdbaa54bf2571d3ab60001866a4270a58c0fac37846135f3256bdc0f85a93a1b
-EBUILD gimp-2.4.4.ebuild 4041 RMD160 d2691fb9a252414cbcb937098daa16b3c47dd37e SHA1 3638237b4c22aec7ccaa08fe4d7606eff4d4fbe8 SHA256 215556bc979c3e9b152bb0553c6e31d8ebf72cbdef1eb40ac9d5eb23dfed4abc
-EBUILD gimp-2.4.5.ebuild 4115 RMD160 2f1821c42c0678ad8116ee3fa7c4de2ce424c027 SHA1 9a8a70d4f4e34adf46f04b65b850742a0be24c26 SHA256 60c0a338dee9dc14a01971cace5fea7075a1822c9778084f4b338799df280ce7
-EBUILD gimp-9999.ebuild 3786 RMD160 ede6db9fbc04791c7dd3ac7f38bdd86d9e296fc6 SHA1 488c776ec66885737fc8da4fcd34c7689badc968 SHA256 f859ede7919d34622459e7ac823bc4a515d137692dc07de3f37f04c0556f06ea
-MISC ChangeLog 34330 RMD160 3e52702f0fb98e8cec5c4934df07c1bb75a07538 SHA1 53bd03338da412c3359d22131833ed0eebc9c51f SHA256 06c07b27b0b6416f4825b3adc419aa340bc55ab735a4ad2be86f98deaf7d3f34
+EBUILD gimp-2.4.2.ebuild 3715 RMD160 6ec75e893835a54423d213cd88227687446c6eea SHA1 c473510d50ff2a60f49c82a9a397a298e5853872 SHA256 9689bdb56d0cf2d9e28e96fe742fd2722a9079e7a4d5233ee28db1c1534ffb84
+EBUILD gimp-2.4.5.ebuild 4122 RMD160 580a2c0d2acbfcf16143b9d5370c2499f83fef1a SHA1 9a227bd2d88b29d748aeb41812efdddfbad1265f SHA256 146b3c4c70e37109857b22f04b3c7d20decd9c34d232440aa068435b71d26734
+EBUILD gimp-9999.ebuild 3793 RMD160 29281236f832188b6f4d70b0c816323d809952fa SHA1 addceccd76f5e456805b520474ce6b0d04fbcc4a SHA256 12c3f2d2821af271a298ea009d618264d61903e9c90888fa01c5dba481e7030c
+MISC ChangeLog 34476 RMD160 df7a630e3d12f641d207d549a2647e51d28ee240 SHA1 6d8d7667da5cf5d8b7bd57b06b38414aa44ff7e2 SHA256 189839896bd125c029f0833a39beff7253847971d68f573ac4d4e9a732347c1a
 MISC metadata.xml 220 RMD160 a49072631c03f8ac3685b12169abeef3b34ad3d6 SHA1 9614887db749b0a3c17016da5b3ec0e42b908ad3 SHA256 c893488c84e6da8039f2b473982f03e934ec12f8fe2c1ace770f9e34969db081
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.7 (GNU/Linux)
+Version: GnuPG v2.0.9 (GNU/Linux)
 
-iD8DBQFH6aWgr2QksT29OyARAgiZAJ0bXCmH8Zcpy4vXYywxXILddcyi0gCgiNKS
-FxoN8Oa9XZE+O4el2Kg8N8g=
-=Og8f
+iEYEARECAAYFAkf5LjEACgkQr2QksT29OyDpRQCeNeyTZkvtwTQ8jMLtJ8XunIgd
+WMgAnAlyzAWtARKQxViYrEK/dWfHdi0l
+=WMY6
 -----END PGP SIGNATURE-----
