@@ -1,6 +1,10 @@
 # ChangeLog for media-gfx/gimp
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/gimp/ChangeLog,v 1.252 2008/03/26 01:23:33 hanno Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/gimp/ChangeLog,v 1.253 2008/04/06 20:10:18 hanno Exp $
+
+  06 Apr 2008; Hanno Boeck <hanno@gentoo.org> gimp-2.4.2.ebuild,
+  -gimp-2.4.4.ebuild, gimp-2.4.5.ebuild, gimp-9999.ebuild:
+  Raise gettext dep.
 
   26 Mar 2008; Hanno Boeck <hanno@gentoo.org> +files/gimp-web-browser.patch,
   gimp-2.4.5.ebuild:
